@@ -957,9 +957,8 @@ void bx_generic_cpuid_t::init_vmx_extensions_bitmask(void)
                         BX_VMX_X2APIC_VIRTUALIZATION |
                         BX_VMX_PAUSE_LOOP_EXITING;
 
-    features_bitmask |= BX_VMX_CR3_VMEXIT_DISABLE |
-                     /* BX_VMX_MONITOR_TRAP_FLAG | */
-                        BX_VMX_SAVE_DEBUGCTL_DISABLE |
+    features_bitmask |= BX_VMX_SAVE_DEBUGCTL_DISABLE |
+                     /* BX_VMX_MONITOR_TRAP_FLAG | */ // not implemented yet
                         BX_VMX_PERF_GLOBAL_CTRL;
 #endif
   }
